# custom-mcp-database

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  claude_desktop_config.exemple.json  config_db.py  main.py  manifest.json  mcp-db  pyproject.toml  requirements.txt  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
examples/mcp-clients/: README.md  cursor.json  vscode.json
scripts/: bump_version.py  gen_changelog.py  sync_version.py
src/custom_mcp_database/: __init__.py  cli.py  config_db.py  core.py  security.py  server.py
tests/: test_credentials.py  test_security.py
