[project]
name = "custom-mcp-database"
version = "0.3.2"
description = "MCP server that lets AI agents run read/write queries against PostgreSQL, MySQL, MongoDB and Oracle through alias-based connections, without exposing credentials."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Renan Oliveira" }]
keywords = ["mcp", "model-context-protocol", "database", "postgresql", "mysql", "mongodb", "oracle", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
dependencies = [
    "mcp>=1.27,<2",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=9.0",
    "pymongo>=4.6",
    "oracledb>=2.0",
]

[project.urls]
Homepage = "https://github.com/renanlido/custom-mcp-database"
Repository = "https://github.com/renanlido/custom-mcp-database"
Issues = "https://github.com/renanlido/custom-mcp-database/issues"

[project.scripts]
custom-mcp-database = "custom_mcp_database.cli:main"
mcp-db = "custom_mcp_database.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.6", "build>=1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_mcp_database"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
